# rust-study

./: .gitignore  Cargo.toml  README.md  opentelemetry-filter-config.yaml  study_content.md
gpui_ui/: Cargo.toml
gpui_ui/docs/: GPUI_CONTEXT_API.md  GPUI_GUIDE.md  GPUI_WINDOW_API.md
gpui_ui/examples/: complete_simple_main.rs  simple_main.rs
gpui_ui/examples/complete_simple_search/: mod.rs
gpui_ui/examples/simple_search/: mod.rs
gpui_ui/src/: dashboard.rs  data.rs  main.rs  theme.rs
gpui_ui/src/components/: chart_panel.rs  header.rs  mod.rs  quote_panel.rs  sidebar.rs  watchlist.rs
rust_actix/: Cargo.toml
rust_actix/src/: main.rs
rust_actix/src/controller/: basic.rs  json.rs  mod.rs
rust_actix/src/form_request/: form.rs  handler.rs  json.rs  mod.rs  path.rs  query.rs  websocket.rs
rust_actix/src/sse/: mod.rs  sender.rs  sse_endpoint.rs
rust_actix/web-front/css/: login.css
rust_actix/web-front/html/: login.html
rust_actix/web-front/js/: login.js
rust_async/: Cargo.toml  knowledge.md
rust_async/src/: download.rs  lib.rs  read_write.rs  spawn.rs  stream_test.rs  time_future.rs
rust_basic/: Cargo.toml  knowledge.md
rust_basic/src/: lib.rs
rust_basic/src/chapter_1/: bool.rs  char.rs  control_flow.rs  float_type.rs  function.rs  hello_world.rs  integer_type.rs  mod.rs  other.rs  practice.rs  value.rs
rust_basic/src/chapter_2/: mod.rs  ownership.rs  reference.rs
rust_basic/src/chapter_3/: array.rs  enum_type.rs  loop_and_control.rs  mod.rs  model_match.rs  slice.rs  string.rs  struct_type.rs  tuple.rs
rust_basic/src/chapter_4/: function.rs  generics_test.rs  hashmap_test.rs  inputTestFile.txt  input_output.rs  mod.rs  trait_test.rs  vector_test.rs
rust_basic/src/chapter_5/: box_point.rs  cell_test.rs  closure_iterator.rs  deref_point.rs  drop_point.rs  live_cycle.rs  mod.rs  rc.rs  smart_points.rs
rust_basic/src/chapter_6/: atomic_test.rs  concurrent_paraller.rs  lock_test.rs  message.rs  mod.rs  send_test.rs
rust_include_dir/: Cargo.toml
rust_include_dir/src/: main.rs
rust_include_dir/src/config/: settings.toml
rust_macro/: Cargo.toml
rust_macro/src/: declaration_macro_demo.rs  getter.rs  lib.rs
rust_mcp/: README.md
rust_mcp/clients/: Cargo.toml
rust_mcp/clients/examples/: client_sampling_stdio.rs  count_client_stdio.rs
rust_mcp/clients/src/: sampling_stdio.rs
rust_mcp/servers/: Cargo.toml
rust_mcp/servers/examples/: count_server_stdio.rs  prompt_server_stdio.rs  server_sse.rs  servers_sampling_stdio.rs
rust_mcp/servers/src/: sampling_stdio.rs
rust_net/: Cargo.toml
rust_net/src/: eventsource_demo.rs  http_types.rs  ipnet_demo.rs  lib.rs  netdev_demo.rs  reqwest_demo.rs  stunclient_demo.rs  url_demo.rs
rust_net/src/tcp/: client.rs  server.rs
rust_net/src/udp/: client.rs  server.rs
rust_slint/: Cargo.toml  README.md  build.rs  系统自定义组件.md
rust_slint/src/: main.rs
rust_slint/src/home/: calendar.rs
rust_slint/ui/: app-window.slint
rust_slint/ui/components/: calendar.slint  separate.slint  tarbbar.slint  todoList.slint
rust_slint/ui/global/: logic.slint  user.slint
rust_wgpu/: Cargo.toml  components.md  learning.md
rust_wgpu/src/: dialogs.rs  main.rs
rust_wgpu/src/common/: WGSL详细指南.md  images.rs  mod.rs  wgpu_test.rs
rust_wgpu/src/ui/: base.rs
rust_wgpu/src/wgsl/: fist.wgsl  triangle.wgsl
rust_wgpu/src/window/: init.rs  loop_event.rs  mod.rs  send_event.rs
src/: main.rs
src/database/: mod.rs  mysql.rs  postgresql.rs  redis_demo.rs  sqlite.db  sqlite_demo.rs
src/database/models/: city.rs  dict.rs  dict_group.rs  driving_school.rs  mod.rs  prelude.rs  question.rs
src/error/: anyhow_demo.rs  mod.rs  thiserror_demo.rs
src/file/: excel_demo.rs  include_dir_demo.rs  mod.rs  rust_self.rs  tar_demo.rs  temp_file.rs  users.xlsx  walkdir_demo.rs  zip_demo.rs
src/logs/: env_logger_demo.rs  flexi_demo.rs  log_demo.rs  mod.rs  pretty_log.rs  simple_log_demo.rs
src/mcp/: mod.rs  rmcp使用说明.md
src/mcp/clients/: simple_client.rs
src/mcp/servers/: mod.rs  sampling_stdio.rs  simple_server.rs
src/other/: async_trait_demo.rs  builder_demo.rs  clipboard_demo.rs  crossterm_demo.rs  ctor_demo.rs  declaration_macro_demo.rs  enigo_demo.rs  enum_dispatch_demo.rs  getset_demo.rs  hex_demo.rs  kafka-rust使用指南.md  kafka_demo.rs  mack.rs  macro_test.rs  mod.rs  once.rs  regex_demo.rs  sha.rs  string_format.rs  wild.rs  winnow_demo.rs  winnow_rust.txt  winnow_rust_demo.rs  winnow_usage_guide.md
src/search/: mod.rs
src/search/meili_search/: meilisearch_demo.rs  mod.rs  movie.rs
src/serialize/: config.toml  config_test.rs  mod.rs  rust_ini.rs  schemars_demo.rs  schemars_guide.md  serde_json_test.rs  serde_test.rs  toml_test.rs
src/serialize/data/: ini_test.ini  json_data.json  yaml_data.yaml
src/shell/: clap_demo.rs  colored_demo.rs  duct_demo.rs  mod.rs
src/system/: bytes_demo.rs  ctrlc_demo.rs  locale.rs  lru_demo.rs  mac_address_demo.rs  mod.rs  num_cpus_demo.rs  os_info_demo.rs  rdev_demo.rs  shutdown.rs  ssh_demo.rs
src/web/: crossbeam.rs  email.rs  embed.rs  handlebars_demo.rs  jwt.rs  mime.rs  mod.rs  qrcode.rs  ringbuf_demo.rs  test.rs
src/web/embed_files/: test.txt
src/web/embed_files/temp/: index.html  temp.txt
src/web/template/: user.html
src/windows/: mod.rs  winapi_demo.rs
tauri-test/: package-lock.json  package.json
tauri-test/src/: App.vue
tauri-test/src-tauri/: Cargo.toml  document.md  tauri.conf.json
tauri-test/src-tauri/src/: lib.rs  main.rs
tauri-test/src-tauri/src/controller/: mod.rs  user_controller.rs
tauri-test/src-tauri/src/model/: user.rs
tauri-test/src/router/: index.js
tauri-test/src/views/: Home.vue  Login.vue
