[package]
name = "rust-study"
version = "0.1.0"
edition = "2024"
description = "rust-study"

[workspace]
name = "rust-study"
members = ["rust_basic", "rust_async", "rust_net", "rust_include_dir"]


[[bin]]
name = "clap_demo"
path = "src/shell/clap_demo.rs"

[dependencies]
duct = "1.0.0"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.142"

rust-ini = "0.21"
toml = "0.9.5"
config = "0.15.13"
clap = {version = "4.5.43", features = ["derive"]}
colored = "3.0.0"

# 日志库
flexi_logger = "0.31"
log = "0.4"
pretty_env_logger = "0.5.0"
env_logger = "0.11.8"
simple-log = "2.3.0"

# file
walkdir = "2.5.0"
include_dir = {version = "0.7.4", features=["glob"]}
