[package]
name = "rust-study"
version = "0.1.0"
edition = "2024"
description = "rust-study"

[workspace]
name = "rust-study"
members = ["rust_basic", "rust_async", "rust_net", "rust_include_dir", "rust_actix"]


[[bin]]
name = "clap_demo"
path = "src/shell/clap_demo.rs"

[dependencies]
duct = "1.0.0"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.142"

rust-ini = "0.21"
toml = "0.9.5"
config = "0.15.13"
clap = {version = "4.5.43", features = ["derive"]}
colored = "3.0.0"

# 日志库
flexi_logger = "0.31"
log = "0.4"
pretty_env_logger = "0.5.0"
env_logger = "0.11.8"
simple-log = "2.3.0"

# file
walkdir = "2.5.0"
include_dir = {version = "0.7.4", features=["glob"]}
tempfile = "3.20.0"
zip = "4.3.0"
tar = "0.4.44"

# error
thiserror = "2.0.14"
anyhow = "1.0.99"

# system
os_info = "3.12.0"
num_cpus = "1.17.0"
sys-locale = "0.3.2"
system_shutdown = "4.0.1"
mac_address = "1.1.8"

# web
qrcode-generator = "5.0.0"