[package]
name = "rust-study"
version = "0.1.0"
edition = "2024"
description = "rust-study"

[workspace]
name = "rust-study"
members = ["rust_basic", "rust_async", "rust_net", "rust_actix", "rust_mcp/clients", "rust_mcp/servers", "rust_wgpu", "rust_slint"]


#[[bin]]
#name = "clap_demo"
#path = "src/shell/clap_demo.rs"

[dependencies]
duct = "1.0.0"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.142"
schemars = "1.0"

rust-ini = "0.21"
toml = "0.9.5"
config = "0.15.13"
clap = {version = "4.5.43", features = ["derive"]}
colored = "3.0.0"

# 日志库
flexi_logger = "0.31"
log = "0.4"
pretty_env_logger = "0.5.0"
env_logger = "0.11.8"
simple-log = "2.3.0"

# file
walkdir = "2.5.0"
include_dir = {version = "0.7.4", features=["glob"]}
tempfile = "3.20.0"
zip = "4.3.0"
tar = "0.4.44"
# Excel
calamine = "0.30.1"
rust_xlsxwriter = "0.90.1"

# error
thiserror = "2.0.14"
anyhow = "1.0.99"

# system
os_info = "3.12.0"
num_cpus = "1.17.0"
sys-locale = "0.3.2"
system_shutdown = "4.0.1"
mac_address = "1.1.8"
bytes = "1.10.1"
ctrlc = "3.4.7"
rdev = "0.5.3"
lru = "0.16.1"

# web
qrcode-generator = "5.0.0"
crossbeam-queue = "0.3.12"
ringbuf = "0.4.8"
mime_guess = "2.0.5"
jsonwebtoken = "9.3.1"
lettre = {version = "0.11", features = ["smtp-transport","tokio1-native-tls"]}
handlebars = "6.3.2"

# windows
winapi = "0.3.9"


# database
sea-orm = {version = "1.1.14",features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros", "sqlx-sqlite"]}
tokio = {version="1.47.1", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["sync"] }
redis = {version = "0.32.5", features = ["r2d2", "tokio-comp", "json"]}
meilisearch-sdk = "0.29.1"

# other
wildmatch = "2.4.0"
regex = "1.11.2"
hex = "0.4.3"
sha2 = "0.10.9"
once_cell = "1.21.3"
derive_builder = "0.20.2"
winnow = "0.7.13"
rmcp = {version = "0.6.4", features = [
    "server", 
    "macros", 
    "client", 
    "transport-sse-server", 
    "transport-sse-client-reqwest", 
    "transport-io",
    "transport-streamable-http-server",
    "transport-child-process",
    "schemars"
    ]}
tokio-util = { version = "0.7" }
clipboard = "0.5.0"
crossterm = "0.29.0"
enigo = "0.6.1"
ctor = "0.5.0"
getset = "0.1.6"
strfmt = "0.2.5"
enum_dispatch = "0.3.13"


[dev-dependencies]
mockall = "0.13.1"
httpmock = "0.7.0"
rust_macro = {path = "./rust_macro"}

[target.'cfg(target_os = "macos")'.dependencies]    ## windows、macos、linux、unix
rust-embed = {version = "8.7.2", features = ["include-exclude"]}
rdkafka = "0.38.0"

###### MCP 服务端
[[example]]
name = "server_sampling_stdio"
path = "rust_mcp/servers/examples/servers_sampling_stdio.rs"

[[example]]
name = "prompt_server_stdio"
path = "rust_mcp/servers/examples/prompt_server_stdio.rs"

[[example]]
name = "count_server_stdio"
path = "rust_mcp/servers/examples/count_server_stdio.rs"

[[example]]
name = "server_sse"
path = "rust_mcp/servers/examples/server_sse.rs"



##### MCP客户端
[[example]]
name = "client_sampling_stdio"
path = "rust_mcp/clients/examples/client_sampling_stdio.rs"

[[example]]
name = "count_client_stdio"
path = "rust_mcp/clients/examples/count_client_stdio.rs"
