[package]
name = "clients"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.142"
tokio = {version="1.47.1", features = ["full"]}
rmcp = {version = "0.6.4", features = ["server", "macros", "client", "transport-sse-server", "transport-sse-client-reqwest", "transport-io","transport-streamable-http-server","transport-child-process"]}